# pisces-moon-os-p4

./: CHANGELOG_v1_2_0_alpha.md  CHANGELOG_v1_2_0_phase15.md  CHANGELOG_v1_2_0_phase16.md  CLA.md  CMakeLists.txt  LICENSE  README.md  REDESIGN_CATALOG.md  partitions.csv  pm_phase16_full_audit.sh  pm_phase16_wifi_events.sh  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.lilygo_tdisplay_p4  sdkconfig.old
components/pm_app_iface/: CMakeLists.txt
components/pm_app_iface/include/: pm_app.h  pm_launcher.h
components/pm_apps/comms/: CMakeLists.txt  pm_app_bluetooth.c  pm_app_gps.c  pm_app_lora_voice.c  pm_app_mesh_messenger.c  pm_app_voice_terminal.c  pm_app_wifi.c
components/pm_apps/comms/include/: pm_app_bluetooth.h  pm_app_gps.h  pm_app_lora_voice.h  pm_app_mesh_messenger.h  pm_app_voice_terminal.h  pm_app_wifi.h
components/pm_apps/cyber/: CMakeLists.txt  pm_app_beacon.c  pm_app_ble_ducky.c  pm_app_ble_gatt.c  pm_app_bt_radar.c  pm_app_hash_tool.c  pm_app_net_scanner.c  pm_app_pkt_analysis.c  pm_app_pkt_sniffer.c  pm_app_probe_intel.c  pm_app_rf_spectrum.c  pm_app_usb_ducky.c  pm_app_wardrive.c  pm_app_wifi_ducky.c  pm_app_wpa_hs.c  pm_ducky_engine.c
components/pm_apps/cyber/include/: pm_app_beacon.h  pm_app_ble_ducky.h  pm_app_ble_gatt.h  pm_app_bt_radar.h  pm_app_hash_tool.h  pm_app_net_scanner.h  pm_app_pkt_analysis.h  pm_app_pkt_sniffer.h  pm_app_probe_intel.h  pm_app_rf_spectrum.h  pm_app_usb_ducky.h  pm_app_wardrive.h  pm_app_wifi_ducky.h  pm_app_wpa_hs.h  pm_ducky_engine.h  pm_wardrive_schema.h
components/pm_apps/games/: CMakeLists.txt  pm_app_chess.c  pm_app_doom.c  pm_app_galaga.c  pm_app_pacman.c  pm_app_retro_elf.c  pm_app_simcity.c  pm_app_snake.c
components/pm_apps/games/include/: pm_app_chess.h  pm_app_doom.h  pm_app_galaga.h  pm_app_pacman.h  pm_app_retro_elf.h  pm_app_simcity.h  pm_app_snake.h
components/pm_apps/intel/: CMakeLists.txt  pm_app_baseball.c  pm_app_gemini_log.c  pm_app_ref_med.c  pm_app_ref_surv.c  pm_app_ssh.c  pm_app_terminal.c  pm_app_trails.c  pm_ref_browser.c
components/pm_apps/intel/include/: pm_app_baseball.h  pm_app_gemini_log.h  pm_app_ref_med.h  pm_app_ref_surv.h  pm_app_ssh.h  pm_app_terminal.h  pm_app_trails.h  pm_ref_browser.h
components/pm_apps/pm_apps_comms/: CMakeLists.txt  pm_app_bluetooth.c  pm_app_gps.c  pm_app_lora_voice.c  pm_app_mesh_messenger.c  pm_app_voice_terminal.c  pm_app_weather.c  pm_app_wifi.c
components/pm_apps/pm_apps_comms/include/: pm_app_bluetooth.h  pm_app_gps.h  pm_app_lora_voice.h  pm_app_mesh_messenger.h  pm_app_voice_terminal.h  pm_app_weather.h  pm_app_wifi.h
components/pm_apps/pm_apps_cyber/: CMakeLists.txt  pm_app_amiibo.c  pm_app_beacon.c  pm_app_ble_beacon.c  pm_app_ble_ducky.c  pm_app_ble_gatt.c  pm_app_bt_radar.c  pm_app_clinician.c  pm_app_hash_tool.c  pm_app_net_scanner.c  pm_app_nfc_clone.c  pm_app_nfc_emulate.c  pm_app_nfc_reader.c  pm_app_pkt_analysis.c  pm_app_pkt_sniffer.c  pm_app_probe_intel.c  pm_app_rf_spectrum.c  pm_app_secondary_scan.c  pm_app_silas_creek.c  pm_app_tracker_scan.c  pm_app_usb_ducky.c  pm_app_wardrive.c  pm_app_wardrive_inspect.c  pm_app_wardrive_p4_redesign.c  pm_app_wifi_ducky.c  pm_app_wpa_hs.c  pm_ducky_engine.c
components/pm_apps/pm_apps_cyber/include/: pm_app_amiibo.h  pm_app_beacon.h  pm_app_ble_beacon.h  pm_app_ble_ducky.h  pm_app_ble_gatt.h  pm_app_bt_radar.h  pm_app_clinician.h  pm_app_hash_tool.h  pm_app_net_scanner.h  pm_app_nfc_clone.h  pm_app_nfc_emulate.h  pm_app_nfc_reader.h  pm_app_pkt_analysis.h  pm_app_pkt_sniffer.h  pm_app_probe_intel.h  pm_app_rf_spectrum.h  pm_app_secondary_scan.h  pm_app_silas_creek.h  (+8 more)
components/pm_apps/pm_apps_games/: CMakeLists.txt  pm_app_2048.c  pm_app_asteroids.c  pm_app_breakout.c  pm_app_chess.c  pm_app_connect4.c  pm_app_doom.c  pm_app_frogger.c  pm_app_galaga.c  pm_app_mario_bros.c  pm_app_minesweeper.c  pm_app_pacman.c  pm_app_pole_position.c  pm_app_retro_elf.c  pm_app_simcity.c  pm_app_simon.c  pm_app_snake.c  pm_app_solitaire.c  pm_app_space_invaders.c  pm_app_tetris.c
components/pm_apps/pm_apps_intel/: CMakeLists.txt  pm_app_baseball.c  pm_app_gemini_log.c  pm_app_ref_med.c  pm_app_ref_surv.c  pm_app_rss.c  pm_app_ssh.c  pm_app_terminal.c  pm_app_trails.c  pm_ref_browser.c
components/pm_apps/pm_apps_system/: CMakeLists.txt  pm_app_about.c  pm_app_bridge.c  pm_app_c6_flasher.c  pm_app_filemgr.c  pm_app_files.c  pm_app_gamepad.c  pm_app_micropython.c
components/pm_apps/pm_apps_tools/: CMakeLists.txt  pm_app_camera_qr.c  pm_app_clock.c  pm_app_contacts.c  pm_app_ereader.c  pm_app_keytest.c
components/pm_apps/system/: CMakeLists.txt  pm_app_about.c  pm_app_bridge.c  pm_app_c6_flasher.c  pm_app_elf_browser.c  pm_app_filemgr.c  pm_app_files.c  pm_app_gamepad.c  pm_app_micropython.c  pm_app_system.c
components/pm_bsp/: CMakeLists.txt  pm_bsp.c  pm_bsp_hi8561.c  pm_bsp_lilygo.c
components/pm_bsp/include/: pm_bsp.h  pm_bsp_hi8561.h
components/pm_c5_uart/: CMakeLists.txt  pm_c5_uart.c
components/pm_c5_uart/include/: pm_c5_uart.h
components/pm_c6_bridge/: CMakeLists.txt  pm_c6_bridge.c
components/pm_c6_bridge/include/: pm_c6_bridge.h
components/pm_cardputer_i2c/: CMakeLists.txt  pm_cardputer_i2c.c
components/pm_cardputer_i2c/include/: pm_cardputer_i2c.h
components/pm_hal/: CMakeLists.txt  pm_hal.c
components/pm_hal/include/: pm_hal.h
components/pm_radio/: CMakeLists.txt  EspHal.h  pm_radio.c  pm_radio_nrf24.cpp
components/pm_radio/include/: pm_radio.h
components/pm_rtc_pcf8563/: CMakeLists.txt  pm_rtc_pcf8563.c
components/pm_rtc_pcf8563/include/: pm_rtc_pcf8563.h
components/pm_tilemap/: CMakeLists.txt  TILE_FORMAT.md  pm_tilemap.c
components/pm_tilemap/include/: pm_tilemap.h
components/pm_ui/: CMakeLists.txt  pm_app_layout.c  pm_cyber.c  pm_stub_app.c  pm_ui.c
components/pm_ui/include/: pm_app_layout.h  pm_cyber.h  pm_stub_app.h  pm_ui.h  pm_ui_p4.h
components/pm_xl9535/: CMakeLists.txt  pm_xl9535.c
components/pm_xl9535/include/: pm_xl9535.h
main/: CMakeLists.txt  idf_component.yml  idf_component.yml.bak  main.c  pm_app.c  pm_apps_register.c  pm_launcher.c
(+848 files in other folders)
